--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
 
   </div>
 
-  <div class="h-[400px] mt-40 flex items-center justify-center">
-    <div class="text-center text-white">
-      <h1 class="text-4xl md:text-6xl lg:text-8xl font-bold mb-4">COMING SOON</h1>
-      <p class="text-lg md:text-xl lg:text-2xl text-gray-400">Man, this placement pressure feels like when your phone’s at 1% battery, and you’re trying to find a charger but everyone’s just watching you panic!</p>
+  <div class="h-[400px] flex items-center justify-center">
+    <div class="text-center text-white/40">
+      <h1 class="text-4xl md:text-6xl lg:text-8xl font-bold mb-4">COMING SOON !</h1>
+      <p class="text-lg md:text-xl lg:text-2xl text-gray-400 text-center px-4 md:px-8 lg:px-16">Man, this placement pressure feels like when your phone’s at 1% battery, and you’re trying to find a charger but everyone’s just watching you panic!</p>
       
     </div>
   </div>
