--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 
+  <link rel="shortcut icon" href="./assets/BEARD MAN.png" type="image/x-icon">
+
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 </head>
 
